Updated build.gradle for java17 deprecated memory flags.